--- a/wqredisclient/theme/light/Base.xaml
+++ b/wqredisclient/theme/light/Base.xaml
@@ -14,10 +14,11 @@
     <Color x:Key="icoLightColor" A="255" R="128" G="135" B="144" />
     <Color x:Key="borderDisableColor" A="255" R="238" G="242" B="248" />
     <Color x:Key="borderNormalColor" A="255" R="219" G="224" B="232" />
-    <Color x:Key="borderLightColor" A="255" R="199" G="205" B="215" />
-    <Color x:Key="redColor" A="255" R="235" G="17" B="37" />
+    <Color x:Key="borderLightColor" A="255" R="199" G="205" B="215" />    
     <Color x:Key="dialogBackgroundColor" A="255" R="247" G="249" B="252" />
-
+    <Color x:Key="redColor" A="255" R="235" G="17" B="37" />
+    <Color x:Key="greenColor" A="255" R="53" G="187" B="0" />
+    <Color x:Key="warnColor" A="255" R="255" G="162" B="0" />
 
     <SolidColorBrush x:Key="primaryBrush" Color="{StaticResource primaryColor}" />
     <SolidColorBrush x:Key="primaryDarkBrush" Color="{StaticResource primaryDarkColor}" />
@@ -39,4 +40,6 @@
     <SolidColorBrush x:Key="inputBorderBrush" Color="{StaticResource borderNormalColor}" />
     <SolidColorBrush x:Key="inputBorderLightBrush" Color="{StaticResource borderLightColor}" />
     <SolidColorBrush x:Key="redBrush" Color="{StaticResource redColor}" />
+    <SolidColorBrush x:Key="greenBrush" Color="{StaticResource greenColor}" />
+    <SolidColorBrush x:Key="warnBrush" Color="{StaticResource warnColor}" />
 </ResourceDictionary>
