--- a/wqredisclient/theme/light/Resources.xaml
+++ b/wqredisclient/theme/light/Resources.xaml
@@ -34,16 +34,16 @@
                         <EventTrigger RoutedEvent="MouseLeave">
                             <BeginStoryboard>
                                 <Storyboard>
-                                    <DoubleAnimation Duration="0:0:0.1" Storyboard.TargetProperty="(RenderTransform).ScaleX" Storyboard.TargetName="icoPath" From="1.4" To="1" />
-                                    <DoubleAnimation Duration="0:0:0.1" Storyboard.TargetProperty="(RenderTransform).ScaleY" Storyboard.TargetName="icoPath" From="1.4" To="1" />
+                                    <DoubleAnimation Duration="0:0:0.1" Storyboard.TargetProperty="(RenderTransform).ScaleX" Storyboard.TargetName="icoPath" To="1" />
+                                    <DoubleAnimation Duration="0:0:0.1" Storyboard.TargetProperty="(RenderTransform).ScaleY" Storyboard.TargetName="icoPath" To="1" />
                                 </Storyboard>
                             </BeginStoryboard>
                         </EventTrigger>
                         <EventTrigger RoutedEvent="Click">
                             <BeginStoryboard>
                                 <Storyboard>
-                                    <DoubleAnimation Duration="0:0:0.1" Storyboard.TargetProperty="(RenderTransform).ScaleX" Storyboard.TargetName="icoPath" From="1.4" To="1" />
-                                    <DoubleAnimation Duration="0:0:0.1" Storyboard.TargetProperty="(RenderTransform).ScaleY" Storyboard.TargetName="icoPath" From="1.4" To="1" />
+                                    <DoubleAnimation Duration="0:0:0.1" Storyboard.TargetProperty="(RenderTransform).ScaleX" Storyboard.TargetName="icoPath" To="1" />
+                                    <DoubleAnimation Duration="0:0:0.1" Storyboard.TargetProperty="(RenderTransform).ScaleY" Storyboard.TargetName="icoPath" To="1" />
                                 </Storyboard>
                             </BeginStoryboard>
                         </EventTrigger>
@@ -559,9 +559,23 @@
                             </Border.Effect>
                         </Border>
                         <Path x:Name="path" Grid.Column="0" Width="14" Height="14" Margin="14 0 4 0" Data="{TemplateBinding Ico}" Fill="{DynamicResource icoNormalBrush}" Stretch="Fill" />
+                        <Path x:Name="loading" Visibility="Collapsed" Grid.Column="0" Width="14" Height="14" Margin="14 0 4 0" Data="{StaticResource svgLoading}" Fill="{DynamicResource icoNormalBrush}" Stretch="Fill" RenderTransformOrigin="0.5 0.5">
+                            <Path.RenderTransform>
+                                <RotateTransform CenterX="0.5" CenterY="0.5" Angle="0" />
+                            </Path.RenderTransform>
+                        </Path>
                         <Label Foreground="{DynamicResource textBaseBrush}" Margin="0 0 14 0" VerticalContentAlignment="Center" Height="38" x:Name="content" Grid.Column="1" HorizontalContentAlignment="Center" HorizontalAlignment="Center" Content="{TemplateBinding Content}" />
                     </Grid>
                     <ControlTemplate.Triggers>
+                        <EventTrigger SourceName="loading" RoutedEvent="Loaded">
+                            <EventTrigger.Actions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="loading" Duration="0:0:4" Storyboard.TargetProperty="(RenderTransform).Angle" From="0" To="360" RepeatBehavior="Forever" />
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger.Actions>
+                        </EventTrigger>
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter Property="Effect" TargetName="border">
                                 <Setter.Value>
@@ -589,6 +603,10 @@
                         <Trigger Property="Content" Value="{x:Null}">
                             <Setter TargetName="content" Property="Visibility" Value="Collapsed"/>
                             <Setter TargetName="path" Property="Margin" Value="14 0" />
+                        </Trigger>
+                        <Trigger Property="IsLoading" Value="true">
+                            <Setter TargetName="loading" Property="Visibility" Value="Visible" />
+                            <Setter TargetName="path" Property="Visibility" Value="Collapsed" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -755,13 +773,7 @@
                         <Border.Effect>
                             <DropShadowEffect Color="{DynamicResource shadowEffectColor}" Opacity="0.2" ShadowDepth="0" BlurRadius="8" />
                         </Border.Effect>
-                    </Border>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="HasDropShadow" Value="true">
-                            <Setter TargetName="Border" Property="Padding" Value="0,3,0,3"/>
-                            <Setter TargetName="Border" Property="CornerRadius" Value="10"/>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
+                    </Border>                    
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
