--- a/wqredisclient/window/RedisServerWindow.xaml
+++ b/wqredisclient/window/RedisServerWindow.xaml
@@ -66,7 +66,7 @@
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>            
             <StackPanel Grid.Row="0">
-                <wq:IcoButton x:Name="btnTest" Style="{StaticResource normalButtonStyle}" Ico="{StaticResource svgConnection}">Test connection</wq:IcoButton>
+                <wq:IcoButton x:Name="btnTest" Click="btnTest_Click" Style="{StaticResource normalButtonStyle}" Ico="{StaticResource svgConnection}">Test connection</wq:IcoButton>
             </StackPanel>            
             <StackPanel Orientation="Horizontal" Grid.Column="2">
                 <wq:IcoButton Click="btnSave_Click" Margin="10 0 0 0" x:Name="btnSave" Style="{StaticResource primaryButtonStyle}" Ico="{StaticResource svgSave}">save</wq:IcoButton>
